<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/musicPlayer"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="28dp"
        android:onClick="goToPlayActivity"
        android:text="@string/player"
        app:layout_constraintBottom_toTopOf="@+id/lists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/lists"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="70dp"
        android:onClick="goToPlayLists"
        android:text="@string/music_lists"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/allMusic"
        android:layout_width="146dp"
        android:layout_height="44dp"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="28dp"
        android:onClick="goToListOfMusic"
        android:text="@string/all_musics"
        app:layout_constraintBottom_toTopOf="@+id/musicPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="90dp"
        android:layout_height="31dp"
        android:layout_marginTop="182dp"
        android:layout_marginBottom="50dp"
        android:text="@string/home"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFDFD"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="28dp"
        android:onClick="createAList"
        android:text="Create a list"
        app:layout_constraintBottom_toTopOf="@+id/allMusic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>